packages/typ/tests/fixtures/diagnostics/0247_fun_explicit_poly_returns_bool_01.ml
let bad_alpha : 'a. 'a -> 'a = fun _ -> true
